chore: adapt default JVM options depending on Java version